test_data/Xml/Unexpected/Unserializable/InvalidClassName/key/wrong.xml.exception
Expected an element representing an instance of class Key with element name key, but got: utterlyInvalid at: the beginning